// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Presenter /> should render correctly 1`] = `
<Presenter
  dispatch={[Function]}
  hash={1}
  lastSlide={0}
  route={
    Object {
      "params": Array [],
      "slide": 1,
    }
  }
  slideIndex={1}
  slideReference={
    Array [
      Object {
        "id": 0,
        "rootIndex": 0,
      },
      Object {
        "id": 1,
        "rootIndex": 1,
      },
      Object {
        "id": 2,
        "rootIndex": 2,
      },
    ]
  }
  slides={
    Array [
      <Slide />,
      <Slide />,
      <Slide />,
    ]
  }
>
  <PresenterContent>
    <div
      className="css-116i7oa-PresenterContent ei2qbrk2"
    >
      <HeaderContainer>
        <div
          className="css-dxw8s7-HeaderContainer ei2qbrk6"
        >
          <SlideInfo>
            <h2
              className="css-1s5st3u-SlideInfo ei2qbrk8"
            >
              Slide 
              2
               of
               
              3
            </h2>
          </Styled(h2)>
          <Time>
            <Styled(div)>
              <div
                className="css-114xpcr-TimeContainer e1x29nnk1"
              >
                <Clock>
                  <Clock>
                    <h2
                      className="css-12m399c-Clock e1x29nnk0"
                    >
                      11 : 04 : 08 AM
                    </h2>
                  </Clock>
                </Clock>
              </div>
            </TimeContainer>
          </Time>
        </div>
      </HeaderContainer>
      <ContentContainer>
        <div
          className="css-1kvje8t-ContentContainer ei2qbrk0"
        >
          <PreviewPane>
            <div
              className="css-10sf8nf-PreviewPane ei2qbrk3"
            >
              <PreviewCurrentSlide
                className="spectacle-presenter-main"
              >
                <div
                  className="spectacle-presenter-main css-1ywobho-PreviewCurrentSlide ei2qbrk4"
                >
                  <Slide
                    dispatch={[Function]}
                    export={false}
                    hash={1}
                    key="1"
                    presenter={true}
                    presenterStyle={
                      Object {
                        "position": "relative",
                      }
                    }
                    print={false}
                    slideIndex={1}
                    transition={Array []}
                    transitionDuration={0}
                    transitionIn={Array []}
                    transitionOut={Array []}
                  >
                    <div>
                      Slide Content
                    </div>
                  </Slide>
                </div>
              </PreviewCurrentSlide>
              <PreviewNextSlide>
                <div
                  className="css-4nxe4y-PreviewNextSlide ei2qbrk5"
                >
                  <Slide
                    appearOff={true}
                    dispatch={[Function]}
                    export={false}
                    hash={2}
                    key="2"
                    presenter={true}
                    presenterStyle={
                      Object {
                        "position": "relative",
                      }
                    }
                    print={false}
                    slideIndex={2}
                    transition={Array []}
                    transitionDuration={0}
                    transitionIn={Array []}
                    transitionOut={Array []}
                  >
                    <div>
                      Slide Content
                    </div>
                  </Slide>
                </div>
              </PreviewNextSlide>
            </div>
          </PreviewPane>
          <Notes>
            <div
              className="css-1c94gjj e1w6ljo77"
            />
          </Styled(div)>
        </div>
      </ContentContainer>
    </div>
  </PresenterContent>
</Presenter>
`;

exports[`<Presenter /> should render timer when set in params. 1`] = `
<Presenter
  dispatch={[Function]}
  hash={1}
  lastSlide={0}
  route={
    Object {
      "params": Array [],
      "slide": 1,
    }
  }
  slideIndex={1}
  slideReference={
    Array [
      Object {
        "id": 0,
        "rootIndex": 0,
      },
      Object {
        "id": 1,
        "rootIndex": 1,
      },
      Object {
        "id": 2,
        "rootIndex": 2,
      },
    ]
  }
  slides={
    Array [
      <Slide />,
      <Slide
        notes="These are my slide notes!!"
      />,
      <Slide />,
    ]
  }
  timer={true}
>
  <PresenterContent>
    <div
      className="css-116i7oa-PresenterContent ei2qbrk2"
    >
      <HeaderContainer>
        <div
          className="css-dxw8s7-HeaderContainer ei2qbrk6"
        >
          <SlideInfo>
            <h2
              className="css-1s5st3u-SlideInfo ei2qbrk8"
            >
              Slide 
              2
               of
               
              3
            </h2>
          </SlideInfo>
          <Time
            timer={true}
          >
            <TimeContainer>
              <div
                className="css-114xpcr-TimeContainer e1x29nnk1"
              >
                <Timer>
                  <div>
                    <Clock>
                      <h2
                        className="css-12m399c-Clock e1x29nnk0"
                      >
                        00 : 00
                      </h2>
                    </Clock>
                    <TButtonContainer>
                      <div
                        className="css-1yid1zu-TButtonContainer e1x29nnk2"
                      >
                        <TSingleButton
                          onClick={[Function]}
                          start={true}
                        >
                          <button
                            className="css-1ci6lkf-TSingleButton e1x29nnk3"
                            onClick={[Function]}
                            start={true}
                          >
                            Start
                          </button>
                        </TSingleButton>
                      </div>
                    </TButtonContainer>
                  </div>
                </Timer>
              </div>
            </TimeContainer>
          </Time>
        </div>
      </HeaderContainer>
      <ContentContainer>
        <div
          className="css-1kvje8t-ContentContainer ei2qbrk0"
        >
          <PreviewPane>
            <div
              className="css-10sf8nf-PreviewPane ei2qbrk3"
            >
              <PreviewCurrentSlide
                className="spectacle-presenter-main"
              >
                <div
                  className="spectacle-presenter-main css-1ywobho-PreviewCurrentSlide ei2qbrk4"
                >
                  <Slide
                    dispatch={[Function]}
                    export={false}
                    hash={1}
                    key="1"
                    notes="These are my slide notes!!"
                    presenter={true}
                    presenterStyle={
                      Object {
                        "position": "relative",
                      }
                    }
                    print={false}
                    slideIndex={1}
                    transition={Array []}
                    transitionDuration={0}
                    transitionIn={Array []}
                    transitionOut={Array []}
                  >
                    <div>
                      Slide Content
                    </div>
                  </Slide>
                </div>
              </PreviewCurrentSlide>
              <PreviewNextSlide>
                <div
                  className="css-4nxe4y-PreviewNextSlide ei2qbrk5"
                >
                  <Slide
                    appearOff={true}
                    dispatch={[Function]}
                    export={false}
                    hash={2}
                    key="2"
                    presenter={true}
                    presenterStyle={
                      Object {
                        "position": "relative",
                      }
                    }
                    print={false}
                    slideIndex={2}
                    transition={Array []}
                    transitionDuration={0}
                    transitionIn={Array []}
                    transitionOut={Array []}
                  >
                    <div>
                      Slide Content
                    </div>
                  </Slide>
                </div>
              </PreviewNextSlide>
            </div>
          </PreviewPane>
          <Notes>
            <div
              className="css-z095sm-Notes ei2qbrk7"
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "These are my slide notes!!",
                  }
                }
              />
            </div>
          </Notes>
        </div>
      </ContentContainer>
    </div>
  </PresenterContent>
</Presenter>
`;

exports[`<Presenter /> should render with notes when slides have them. 1`] = `
<Presenter
  dispatch={[Function]}
  hash={1}
  lastSlide={0}
  route={
    Object {
      "params": Array [],
      "slide": 1,
    }
  }
  slideIndex={1}
  slideReference={
    Array [
      Object {
        "id": 0,
        "rootIndex": 0,
      },
      Object {
        "id": 1,
        "rootIndex": 1,
      },
      Object {
        "id": 2,
        "rootIndex": 2,
      },
    ]
  }
  slides={
    Array [
      <Slide />,
      <Slide
        notes="These are my slide notes!!"
      />,
      <Slide />,
    ]
  }
>
  <PresenterContent>
    <div
      className="css-116i7oa-PresenterContent ei2qbrk2"
    >
      <HeaderContainer>
        <div
          className="css-dxw8s7-HeaderContainer ei2qbrk6"
        >
          <SlideInfo>
            <h2
              className="css-1s5st3u-SlideInfo ei2qbrk8"
            >
              Slide 
              2
               of
               
              3
            </h2>
          </Styled(h2)>
          <Time>
            <Styled(div)>
              <div
                className="css-114xpcr-TimeContainer e1x29nnk1"
              >
                <Clock>
                  <Clock>
                    <h2
                      className="css-12m399c-Clock e1x29nnk0"
                    >
                      11 : 04 : 08 AM
                    </h2>
                  </Clock>
                </Clock>
              </div>
            </TimeContainer>
          </Time>
        </div>
      </HeaderContainer>
      <ContentContainer>
        <div
          className="css-1kvje8t-ContentContainer ei2qbrk0"
        >
          <PreviewPane>
            <div
              className="css-10sf8nf-PreviewPane ei2qbrk3"
            >
              <PreviewCurrentSlide
                className="spectacle-presenter-main"
              >
                <div
                  className="spectacle-presenter-main css-1ywobho-PreviewCurrentSlide ei2qbrk4"
                >
                  <Slide
                    dispatch={[Function]}
                    export={false}
                    hash={1}
                    key="1"
                    notes="These are my slide notes!!"
                    presenter={true}
                    presenterStyle={
                      Object {
                        "position": "relative",
                      }
                    }
                    print={false}
                    slideIndex={1}
                    transition={Array []}
                    transitionDuration={0}
                    transitionIn={Array []}
                    transitionOut={Array []}
                  >
                    <div>
                      Slide Content
                    </div>
                  </Slide>
                </div>
              </PreviewCurrentSlide>
              <PreviewNextSlide>
                <div
                  className="css-4nxe4y-PreviewNextSlide ei2qbrk5"
                >
                  <Slide
                    appearOff={true}
                    dispatch={[Function]}
                    export={false}
                    hash={2}
                    key="2"
                    presenter={true}
                    presenterStyle={
                      Object {
                        "position": "relative",
                      }
                    }
                    print={false}
                    slideIndex={2}
                    transition={Array []}
                    transitionDuration={0}
                    transitionIn={Array []}
                    transitionOut={Array []}
                  >
                    <div>
                      Slide Content
                    </div>
                  </Slide>
                </div>
              </PreviewNextSlide>
            </div>
          </PreviewPane>
          <Notes>
            <div
              className="css-z095sm-Notes ei2qbrk7"
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "These are my slide notes!!",
                  }
                }
              />
            </div>
          </Notes>
        </div>
      </ContentContainer>
    </div>
  </PresenterContent>
</Presenter>
`;
